--- a/ramdisk/init.huawei.rc
+++ b/ramdisk/init.huawei.rc
@@ -18,7 +18,10 @@ on boot
     chown bluetooth bluetooth /sys/class/rfkill/rfkill0/type
     chown bluetooth bluetooth /sys/class/rfkill/rfkill0/state
     chown bluetooth bluetooth /proc/bluetooth/sleep/proto
+    chown system system /sys/module/sco/parameters/disable_esco
+    chown bluetooth bluetooth /sys/module/hci_smd/parameters/hcismd_set
     chmod 0660 /sys/module/bluetooth_power/parameters/power
+    chmod 0660 /sys/module/hci_smd/parameters/hcismd_set
     chmod 0660 /sys/class/rfkill/rfkill0/state
     chmod 0660 /proc/bluetooth/sleep/proto
     chmod 0660 /proc/bluetooth/clock/proto
@@ -27,11 +30,34 @@ on boot
     chown bluetooth bluetooth /sys/devices/platform/msm_serial_hs.0/clock
     chmod 0660 /sys/devices/platform/msm_serial_hs.0/clock
 
+    # Create the directories used by the Wireless subsystem
+    mkdir /data/misc/wifi 0770 wifi wifi
+    mkdir /data/misc/wifi/sockets 0770 wifi wifi
+    mkdir /data/misc/wifi/wpa_supplicant 0770 wifi wifi
+    mkdir /data/misc/dhcp 0770 dhcp dhcp
+    chown dhcp dhcp /data/misc/dhcp
+    symlink /persist/qcom_wlan_nv.bin /etc/firmware/wlan/qcom_wlan_nv.bin
+    symlink /data/hostapd/qcom_cfg.ini /etc/firmware/wlan/qcom_cfg.ini
+    mkdir /data/hostapd 0770 root root
+    chmod 0660 /data/hostapd/hostapd.conf
+    setprop wifi.interface eth0
+
     # port-bridge
     chmod 0660 /dev/smd0
     chown system system /dev/smd0
 
     chmod 0444 /sys/devices/platform/msm_hsusb/gadget/usb_state
+
+    # create symlink for fb1 as HDMI
+    symlink /dev/graphics/fb1 /dev/graphics/hdmi
+
+    # Remove write permissions to video related nodes
+    chmod 0664 /sys/devices/virtual/graphics/fb1/hpd
+    chmod 0664 /sys/devices/virtual/graphics/fb1/video_mode
+    chmod 0664 /sys/devices/virtual/graphics/fb1/format_3d
+
+    # Change owner and group for media server and surface flinger
+    chown system system /sys/devices/virtual/graphics/fb1/format_3d
 
     # For bridgemgr daemon to inform the USB driver of the correct transport
     chown radio radio /sys/class/android_usb/f_rmnet_smd_sdio/transport
@@ -59,6 +85,10 @@ on boot
     chmod 0664 /dev/accel
     chmod 0664 /dev/compass_aot
     chmod 0664 /dev/akm8975_dev
+    chmod 0664 /dev/compass_dev
+    chmod 0664 /dev/gyro
+
+    chown radio system /sys/class/leds/ptt_led/brightness
 
     chown system system /sys/kernel/logger/log_main/enable
     chown system system /sys/kernel/logger/log_events/enable
@@ -98,18 +128,19 @@ on boot
 on emmc-fs
     # mount mmc partitions
     wait /dev/block/mmcblk0p12
-    mount ext4 /dev/block/mmcblk0p12 /system ro barrier=1,nodelalloc
+    mount ext4 /dev/block/mmcblk0p12 /system ro barrier=1
     wait /dev/block/mmcblk0p13
     exec /system/bin/e2fsck -p /dev/block/mmcblk0p13
-    mount ext4 /dev/block/mmcblk0p13 /data nosuid nodev barrier=1 noauto_da_alloc,nodelalloc
-    mount ext4 /dev/block/mmcblk0p6 /cache nosuid nodev barrier=1,nodelalloc
-    
-    wait /dev/block/mmcblk0p19
-    mount vfat /dev/block/mmcblk0p19 /storage/sdcard0 uid=1000,gid=1015,umask=0002,utf8
-    mount ext4 /dev/block/mmcblk0p18 /cust ro
+    mount ext4 /dev/block/mmcblk0p13 /data nosuid nodev barrier=1 noauto_da_alloc
+    mount ext4 /dev/block/mmcblk0p6 /cache nosuid nodev barrier=1
+    write /sys/module/block2mtd/parameters/block2mtd /dev/block/mmcblk0p7
+    wait /dev/block/mmcblk0p14
+    mount vfat /dev/block/mmcblk0p14 /mnt/emmc uid=1000,gid=1015,umask=0002,utf8
+    mkdir /.cust_backup
+    mount vfat /dev/block/mmcblk0p1 /.cust_backup rw wait
+    mkdir /cust 
+    mount ext4 loop@.cust_backup/image/cust.img /cust rw
 
-    # Imported from init.msm7627a.rc
-    write /sys/module/block2mtd/parameters/block2mtd /dev/block/mmcblk0p17
 
 # msm specific files that need to be created on /data
 on post-fs-data
@@ -158,6 +189,9 @@ service rmt_storage /system/bin/rmt_storage /dev/block/mmcblk0p10 /dev/block/mmc
     user root
     disabled
 
+on property:ro.emmc=1
+    start rmt_storage
+
 service hciattach /system/bin/sh /system/etc/bluetooth/init.bcm.bt.sh
     class main
     user bluetooth
@@ -204,6 +238,11 @@ on property:ro.baseband="msm"
 on property:ro.baseband="unknown"
     start port-bridge
 
+service qmiproxy /system/bin/qmiproxy
+    class main
+    user radio
+    group radio
+    disabled
 
 service pcm-bridge /system/bin/pcm-bridge /dev/smd7 /dev/ttyGS1
 
@@ -215,15 +254,24 @@ service qmuxd /system/bin/qmuxd
 service netmgrd /system/bin/netmgrd
     class main
 
-service wpa_supplicant /system/bin/wpa_supplicant -Dnl80211 -ieth0 -puse_p2p_group_interface=1 -W -c/data/misc/wifi/wpa_supplicant.conf
-    class main
+on property:ro.use_data_netmgrd=false
+    # netmgr not supported on specific target
+    stop netmgrd
+
+service wpa_supplicant /system/bin/logwrapper /system/bin/wpa_supplicant -Dwext -ieth0 -c/data/misc/wifi/wpa_supplicant.conf -dd
+    class late_start
+    user root
     group wifi inet
     socket wpa_eth0 dgram 660 wifi wifi
     disabled
     oneshot
 
-service dhcpcd_eth0 /system/bin/dhcpcd -BKLG
-    class main
+service dhcpcd_eth0 /system/bin/dhcpcd -BKL
+    disabled
+    oneshot
+
+service dhcpcd_p2p /system/bin/dhcpcd -BKLG
+    class late_start
     disabled
     oneshot
 
