--- a/ramdisk/ueventd.huawei.rc
+++ b/ramdisk/ueventd.huawei.rc
@@ -7,6 +7,7 @@
 /dev/urandom              0666   root       root
 /dev/ashmem               0666   root       root
 /dev/binder               0666   root       root
+/dev/hw_led        	  0740   system     system
 /dev/rtc0                 0600   system     system
 /dev/accel                0666   root       root
 /dev/light                0666   root       root
@@ -45,9 +46,10 @@
 /dev/uinput               0660   system     bluetooth
 /dev/alarm                0664   system     radio
 /dev/tty0                 0660   root       system
+/dev/graphics/fb1         0660   system     graphics
+/dev/graphics/fb0         0660   system     graphics
 /dev/sdio_tty_ciq_00      0660   system     system
 /dev/graphics/*           0660   system     graphics
-/dev/graphics/fb0         0666   system     graphics
 /dev/msm_hw3dm            0660   system     graphics
 /dev/msm_rotator          0660   system     graphics
 /dev/input/*              0660   root       input
@@ -79,6 +81,7 @@
 /dev/msm_pcm_out*         0660   system     audio
 /dev/msm_pcm_in*          0660   system     audio
 /dev/msm_mvs              0660   system     audio
+#enable radio program access msm_voicememo
 /dev/msm_voicememo        0666   system     audio
 /dev/msm_pcm_ctl*         0660   system     audio
 /dev/msm_snd*             0660   system     audio
@@ -178,8 +181,13 @@
 /dev/msm_amrnb_in         0640  system       audio
 /sys/devices/virtual/usb_composite/*   enable      0664  root   system
 /sys/devices/virtual/smdpkt/smdcntl*       open_timeout   0664 radio radio
+/sys/devices/virtual/input/input*   enable      0660  root   input
+/sys/devices/virtual/input/input*   poll_delay  0660  root   input
+#permissions for sensors
+/dev/block/mmcblk0p7      0660  system       system
 /dev/hw_extern_sdcard     0444  sdcard_rw    sdcard_rw
 /dev/hw_extern_sdcardMounted 0644	sdcard_rw   sdcard_rw
+#/dev/phudiag              0664  system       system
 /dev/smem_sleep_log       0664	system       system
 /dev/pn544                  0660   root   nfc
 /dev/msm_dsps             0660  system       system
