--- a/ramdisk/init.huawei.rc
+++ b/ramdisk/init.huawei.rc
@@ -187,9 +187,9 @@ on post-fs-data
     chmod 0660 /sys/class/android_usb/android0/f_mass_storage/lun/file
     chown system system /sys/class/android_usb/android0/f_rndis/ethaddr
     chmod 0660 /sys/class/android_usb/android0/f_rndis/ethaddr
+    chmod 0666 /proc/cmdline
 
     setprop vold.post_fs_data_done 1
-    am display-size 854x480
 
 on property:init.svc.wpa_supplicant=stopped
     stop dhcpcd
@@ -374,24 +374,3 @@ service map1 /system/bin/sdptool add --channel=17 MAS1
     group bluetooth net_bt_admin
     disabled
     oneshot
-
-service ril-daemon /system/bin/rild
-    class main
-    socket rild stream 660 root radio
-    socket rild-debug stream 660 radio system
-    user root
-    disabled
-    group radio cache inet misc audio sdcard_rw qcom_oncrpc diag
-
-service ril-daemon1 /system/bin/rild -c 1
-    class main
-    socket rild1 stream 660 root radio
-    socket rild-debug1 stream 660 radio system
-    user root
-    disabled
-    group radio cache inet misc audio sdcard_rw qcom_oncrpc diag
-
-service setmac /system/bin/setmac
-
-on property:wlan.driver.status=loading
-    start setmac
