--- a/ramdisk/init.huawei.rc
+++ b/ramdisk/init.huawei.rc
@@ -1,72 +1,42 @@
 import init.huawei.usb.rc
 
 on init
-    # Set permissions for persist partition
+# Set permissions for persist partition
     mkdir /persist 0771 system system
-    
     mkdir /storage 0555 system sdcard_r
     mkdir /storage/sdcard1 0000 system system
     mkdir /storage/sdcard0 0000 system system
-    
+
     export EXTERNAL_STORAGE /storage/sdcard1
 
     symlink /storage/sdcard1 /mnt/sdcard
     symlink /storage/sdcard1 /sdcard
     symlink /storage/sdcard0 /mnt/emmc
     symlink /storage/sdcard0 /HWUserData
-    
 
 on boot
+#bluetooth
     mkdir /data/misc/bluetooth 0770 bluetooth bluetooth
-    chown bluetooth bluetooth /sys/module/bluetooth_power/parameters/power
-    chown bluetooth bluetooth /sys/class/rfkill/rfkill0/type
-    chown bluetooth bluetooth /sys/class/rfkill/rfkill0/state
-    chown bluetooth bluetooth /proc/bluetooth/sleep/proto
-    chown system system /sys/module/sco/parameters/disable_esco
-    chown bluetooth bluetooth /sys/module/hci_smd/parameters/hcismd_set
-    chmod 0660 /sys/module/bluetooth_power/parameters/power
-    chmod 0660 /sys/module/hci_smd/parameters/hcismd_set
+    chown bluetooth net_bt_stack /dev/ttyHS0
+    chown bluetooth net_bt_stack /sys/class/rfkill/rfkill0/type
+    chown bluetooth net_bt_stack /sys/class/rfkill/rfkill0/state
+    chown bluetooth net_bt_stack /proc/bluetooth/sleep/proto
+    chown bluetooth net_bt_stack /sys/devices/platform/msm_serial_hs.0/clock
+
     chmod 0660 /sys/class/rfkill/rfkill0/state
     chmod 0660 /proc/bluetooth/sleep/proto
-    chmod 0660 /proc/bluetooth/clock/proto
-    chown bluetooth bluetooth /dev/ttyHS0
     chmod 0660 /dev/ttyHS0
-    chown bluetooth bluetooth /sys/devices/platform/msm_serial_hs.0/clock
     chmod 0660 /sys/devices/platform/msm_serial_hs.0/clock
 
-    # Create the directories used by the Wireless subsystem
+# Create the directories used by the Wireless subsystem
     mkdir /data/misc/wifi 0770 wifi wifi
     mkdir /data/misc/wifi/sockets 0770 wifi wifi
     mkdir /data/misc/wifi/wpa_supplicant 0770 wifi wifi
     mkdir /data/misc/dhcp 0770 dhcp dhcp
     chown dhcp dhcp /data/misc/dhcp
-    symlink /persist/qcom_wlan_nv.bin /etc/firmware/wlan/qcom_wlan_nv.bin
-    symlink /data/hostapd/qcom_cfg.ini /etc/firmware/wlan/qcom_cfg.ini
-    mkdir /data/hostapd 0770 root root
-    chmod 0660 /data/hostapd/hostapd.conf
     setprop wifi.interface eth0
 
-    # port-bridge
-    chmod 0660 /dev/smd0
-    chown system system /dev/smd0
-
-    chmod 0444 /sys/devices/platform/msm_hsusb/gadget/usb_state
-
-    # create symlink for fb1 as HDMI
-    symlink /dev/graphics/fb1 /dev/graphics/hdmi
-
-    # Remove write permissions to video related nodes
-    chmod 0664 /sys/devices/virtual/graphics/fb1/hpd
-    chmod 0664 /sys/devices/virtual/graphics/fb1/video_mode
-    chmod 0664 /sys/devices/virtual/graphics/fb1/format_3d
-
-    # Change owner and group for media server and surface flinger
-    chown system system /sys/devices/virtual/graphics/fb1/format_3d
-
-    # For bridgemgr daemon to inform the USB driver of the correct transport
-    chown radio radio /sys/class/android_usb/f_rmnet_smd_sdio/transport
-
-    # To allow interfaces to get v6 address when tethering is enabled
+# To allow interfaces to get v6 address when tethering is enabled
     write /proc/sys/net/ipv6/conf/rmnet0/accept_ra 2
     write /proc/sys/net/ipv6/conf/rmnet1/accept_ra 2
     write /proc/sys/net/ipv6/conf/rmnet2/accept_ra 2
@@ -75,14 +45,6 @@ on boot
     write /proc/sys/net/ipv6/conf/rmnet5/accept_ra 2
     write /proc/sys/net/ipv6/conf/rmnet6/accept_ra 2
     write /proc/sys/net/ipv6/conf/rmnet7/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet_sdio0/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet_sdio1/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet_sdio2/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet_sdio3/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet_sdio4/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet_sdio5/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet_sdio6/accept_ra 2
-    write /proc/sys/net/ipv6/conf/rmnet_sdio7/accept_ra 2
 
     chmod 0664 /dev/light
     chmod 0664 /dev/proximity
@@ -93,34 +55,34 @@ on boot
     chmod 0664 /dev/gyro
 
     chown radio system /sys/class/leds/ptt_led/brightness
-
-    chown system system /sys/kernel/logger/log_main/enable
-    chown system system /sys/kernel/logger/log_events/enable
-    chown system system /sys/kernel/logger/log_radio/enable
-    chown system system /sys/kernel/logger/log_main/priority
-    chown system system /sys/kernel/logger/log_events/priority
-    chown system system /sys/kernel/logger/log_radio/priority
-
     chown system system /sys/devices/platform/mmi_key_dev/keytest
 
     chmod 664 /dev/input/event1
     chmod 664 /dev/input/event2
+    chmod 664 /dev/input/event2
+    chmod 664 /dev/input/event3
+    chmod 664 /dev/input/event4
+    chmod 664 /dev/input/event5
+    chmod 664 /dev/input/event6
 
-    chown system system /sys/devices/platform/msm_hsusb/gadget/sdstatus
-    chown system system /sys/devices/platform/msm_hsusb/gadget/switchusb
+# For bridgemgr daemon to inform the USB driver of the correct transport
+    chown radio radio /sys/class/android_usb/f_rmnet_smd_sdio/transport
+
+    chmod 0444 /sys/devices/platform/msm_hsusb/gadget/usb_state
+    chmod 0660 /sys/class/android_usb/android0/f_rndis/ethaddr
     chown system system /sys/devices/platform/msm_hsusb/gadget/fixusb
-    
+    chown system system /sys/class/android_usb/android0/f_rndis/ethaddr
+
     setprop net.tcp.buffersize.hsupa   4094,87380,1220608,4096,16384,1220608
     setprop net.tcp.buffersize.hsdpa   4094,87380,1220608,4096,16384,1220608
     setprop net.tcp.buffersize.evdo_b  4094,87380,262144,4096,16384,262144
 
-    # Assign TCP buffer thresholds to be ceiling value of technology maximums
-    # Increased technology maximums should be reflected here.
+# Assign TCP buffer thresholds to be ceiling value of technology maximums
+# Increased technology maximums should be reflected here.
     write /proc/sys/net/core/rmem_max  1220608
     write /proc/sys/net/core/wmem_max  1220608
 
 on emmc-fs
-    # mount mmc partitions
 # mount mmc partitions
     wait /dev/block/mmcblk0p12
     mount ext4 /dev/block/mmcblk0p12 /system ro barrier=1
@@ -136,100 +98,33 @@ on emmc-fs
     mkdir /cust 
     mount ext4 loop@.cust_backup/image/cust.img /cust rw
 
-on post-fs
-    copy /proc/modem_panic /data/dontpanic/modem_panic
-    chown root log /data/dontpanic/modem_panic
-    chmod 0640 /data/dontpanic/modem_panic
-
 # msm specific files that need to be created on /data
 on post-fs-data
-    mkdir /data/misc/bluetooth 0770 bluetooth bluetooth
-
+    mkdir /data/misc/bluetooth 0770 bluetooth net_bt_stack
     chmod 0666 /sys/class/rfkill/rfkill0/state
-    mkdir /data/misc/bluetoothd/bluedroid 0776 bluetooth system 
-
-    rm /data/misc/bluetoothd/bluedroid/bluedroid_ref 
-    write /data/misc/bluetoothd/bluedroid/bluedroid_ref  0
-    chown bluetooth system /data/misc/bluetoothd/bluedroid/bluedroid_ref
-    chmod 0776 /data/misc/bluetoothd/bluedroid/bluedroid_ref
-
     write /data/btaddr 0
-    chown bluetooth system /data/btaddr
+    chown bluetooth net_bt_stack /data/btaddr
     chmod 0660 /data/btaddr
 
-    # <Dazzozo> Hack! That path seems hardcoded.
-    mkdir /data/misc/wifi/load 0770 wifi wifi
-    cp /system/wifi/fw_4330_b2.bin /data/misc/wifi/load/firmware.bin
-
-    # Create the directories used by the Wireless subsystem
-    mkdir /data/misc/wifi/sockets 0770 wifi wifi
-    mkdir /data/misc/dhcp 0770 dhcp dhcp
-
-    # Create directory used by audio subsystem
-    mkdir /data/misc/audio 0770 audio audio
-
-    chmod 0664 /sys/devices/platform/msm_sdcc.1/polling
+# Chown polling nodes as needed from UI running on system server
     chmod 0664 /sys/devices/platform/msm_sdcc.2/polling
     chmod 0664 /sys/devices/platform/msm_sdcc.3/polling
     chmod 0664 /sys/devices/platform/msm_sdcc.4/polling
-
-    # Chown polling nodes as needed from UI running on system server
-    chown system system /sys/devices/platform/msm_sdcc.1/polling
     chown system system /sys/devices/platform/msm_sdcc.2/polling
     chown system system /sys/devices/platform/msm_sdcc.3/polling
     chown system system /sys/devices/platform/msm_sdcc.4/polling
 
-    # Create directories for wiper services
+# Create directories for wiper services
     mkdir /data/wpstiles/ 0755 shell
     mkdir /data/wiper 0755 location qcom_oncrpc
 
-    chown system system /sys/class/android_usb/android0/f_mass_storage/lun/file
-    chmod 0660 /sys/class/android_usb/android0/f_mass_storage/lun/file
-    chown system system /sys/class/android_usb/android0/f_rndis/ethaddr
-    chmod 0660 /sys/class/android_usb/android0/f_rndis/ethaddr
     chmod 0666 /proc/cmdline
-
     setprop vold.post_fs_data_done 1
-
-on property:init.svc.wpa_supplicant=stopped
-    stop dhcpcd
-
-on property:init.svc.bluetoothd=running
-    write /sys/class/bluetooth/hci0/idle_timeout 7000
 
 service rmt_storage /system/bin/rmt_storage /dev/block/mmcblk0p10 /dev/block/mmcblk0p11 /dev/block/mmcblk0p17
     class main
     user root
     disabled
-
-on property:ro.emmc=1
-    start rmt_storage
-
-service hciattach /system/bin/sh /system/etc/bluetooth/init.bcm.bt.sh
-    class main
-    user bluetooth
-    group qcom_oncrpc bluetooth net_bt_admin system
-    disabled
-    oneshot
-
-service bt-dun /system/bin/dun-server /dev/smd7 /dev/rfcomm0
-    class main
-    disabled
-    oneshot
-
-service sapd /system/bin/sdptool add --channel=15 SAP
-    class main
-    user bluetooth
-    group bluetooth net_bt_admin
-    disabled
-    oneshot
-
-service dund /system/bin/sdptool add --channel=1 DUN
-    class main
-    user bluetooth
-    group bluetooth net_bt_admin
-    disabled
-    oneshot
 
 service bridgemgrd /system/bin/bridgemgrd
     class main
@@ -237,27 +132,11 @@ service bridgemgrd /system/bin/bridgemgrd
     group radio
     disabled
 
-service port-bridge /system/bin/port-bridge /dev/smd0 /dev/ttyGS0
-    class late_start
-    user system
-    group system inet
-    disabled
-
-on property:ro.baseband="msm"
-    start port-bridge
-    # Enable BT-DUN only for all msms
-    setprop ro.qualcomm.bluetooth.dun true
-
-on property:ro.baseband="unknown"
-    start port-bridge
-
 service qmiproxy /system/bin/qmiproxy
     class main
     user radio
     group radio
     disabled
-
-service pcm-bridge /system/bin/pcm-bridge /dev/smd7 /dev/ttyGS1
 
 service qmuxd /system/bin/qmuxd
     class main
@@ -268,10 +147,6 @@ service qmuxd /system/bin/qmuxd
 service netmgrd /system/bin/netmgrd
     class main
     disabled
-
-on property:ro.use_data_netmgrd=false
-    # netmgr not supported on specific target
-    stop netmgrd
 
 service wpa_supplicant /system/bin/logwrapper /system/bin/wpa_supplicant -Dwext -ieth0 -c/data/misc/wifi/wpa_supplicant.conf -dd
     class late_start
@@ -304,19 +179,9 @@ service dhcpcd_bnep0 /system/bin/dhcpcd -BKLG
     disabled
     oneshot
 
-service fm_dl /system/bin/sh /system/etc/init.qcom.fm.sh
-    class main
-    user root
-    group system qcom_oncrpc
-    disabled
-    oneshot
-
 service oem_rpc_svc /system/bin/oem_rpc_svc
     class main
     oneshot
-
-service gps_nmea /system/bin/port-bridge /dev/nmea /dev/ttyGS1
-    disabled
 
 service compassd /system/bin/compassd
     class main
@@ -338,39 +203,26 @@ service rmt_oeminfo /system/bin/rmt_oeminfo
     user root
     oneshot
 
-on property:ro.emmc=1
-    start rmt_oeminfo
-    start rmt_storage
-
 service qcom-sh /system/bin/sh /init.qcom.sh
     class main
     user root
     oneshot
 
-service hostapd /system/bin/hostapd -dddd /data/hostapd/hostapd.conf
-    class main
-    user root
-    group root
-    oneshot
-    disabled
+on property:ro.baseband="msm"
+    start port-bridge
+# Enable BT-DUN only for all msms
+    setprop ro.qualcomm.bluetooth.dun true
 
-service ftp /system/bin/sdptool add --psm=5257 --channel=20 FTP
-    class main
-    user bluetooth
-    group bluetooth net_bt_admin
-    disabled
-    oneshot
+on property:ro.baseband="unknown"
+    start port-bridge
 
-service map0 /system/bin/sdptool add --channel=16 MAS0
-    class main
-    user bluetooth
-    group bluetooth net_bt_admin
-    disabled
-    oneshot
+on property:init.svc.wpa_supplicant=stopped
+    stop dhcpcd
 
-service map1 /system/bin/sdptool add --channel=17 MAS1
-    class main
-    user bluetooth
-    group bluetooth net_bt_admin
-    disabled
-    oneshot
+on property:ro.emmc=1
+    start rmt_oeminfo
+    start rmt_storage
+
+on property:ro.use_data_netmgrd=false
+# netmgr not supported on specific target
+    stop netmgrd
