--- a/bluetooth/bt_vendor.conf
+++ b/bluetooth/bt_vendor.conf
@@ -2,4 +2,4 @@
 UartPort = /dev/ttyHS0
 
 # Firmware patch file location
-FwPatchFilePath = /vendor/firmware/
+FwPatchFilePath = /system/vendor/firmware/
