--- a/init.huawei.rc
+++ b/init.huawei.rc
@@ -4,11 +4,51 @@ on init
     # Set permissions for persist partition
     mkdir /persist 0771 system system
 
+# create mountpoints
+    mkdir /mnt 0775 root system
+    mkdir /mnt/sdcard 0000 system system
+    mkdir /mnt/sdcard1 0000 system system
+    mkdir /HWUserData 0000 system system
+    
+    symlink /mnt/sdcard /sdcard
+    symlink /mnt/sdcard1 /HWUserData
+    
 on early-boot
     # set RLIMIT_MEMLOCK to 64MB
     setrlimit 8 67108864 67108864
 
+on emmc-fs
+# mount mmc partitions
+    wait /dev/block/mmcblk0p12
+    mount ext4 /dev/block/mmcblk0p12 /system rw barrier=1
+    wait /dev/block/mmcblk0p13
+    exec /system/bin/e2fsck -p /dev/block/mmcblk0p13
+    mount ext4 /dev/block/mmcblk0p13 /data rw nosuid nodev barrier=1 noauto_da_alloc noatime nomblk_io_submit
+    mount ext4 /dev/block/mmcblk0p6 /cache rw nosuid nodev barrier=1 noauto_da_alloc noatime nomblk_io_submit
+    wait /dev/block/mmcblk0p14
+    mount vfat /dev/block/mmcblk0p14 /HWUserData uid=1000,gid=1015,umask=0002,utf8
+    mkdir /.cust_backup
+    mount vfat /dev/block/mmcblk0p1 /.cust_backup rw wait
+
+on post-fs
+    chmod 0664 /sys/devices/platform/msm_sdcc.1/polling
+    chmod 0664 /sys/devices/platform/msm_sdcc.2/polling
+    chmod 0664 /sys/devices/platform/msm_sdcc.3/polling
+    chmod 0664 /sys/devices/platform/msm_sdcc.4/polling
+
+    # Chown polling nodes as needed from UI running on system server
+    chown system system /sys/devices/platform/msm_sdcc.1/polling
+    chown system system /sys/devices/platform/msm_sdcc.2/polling
+    chown system system /sys/devices/platform/msm_sdcc.3/polling
+    chown system system /sys/devices/platform/msm_sdcc.4/polling
+
 on boot
+    chmod 0664 /dev/accel
+    chmod 0664 /dev/compass_aot
+    chmod 0664 /dev/light
+    chmod 0664 /dev/compass_dev
+    chmod 0664 /dev/proximity
+    
     mkdir /data/misc/bluetooth 0770 bluetooth bluetooth
     chown bluetooth bluetooth /sys/module/bluetooth_power/parameters/power
     chown bluetooth bluetooth /sys/class/rfkill/rfkill0/type
