--- a/ramdisk/init.huawei.rc
+++ b/ramdisk/init.huawei.rc
@@ -13,6 +13,8 @@ on init
     symlink /mnt/sdcard /sdcard
     symlink /mnt/sdcard1 /HWUserData
     
+    export EXTERNAL_STORAGE /mnt/sdcard
+    
 on early-boot
     # set RLIMIT_MEMLOCK to 64MB
     setrlimit 8 67108864 67108864
