--- a/ramdisk/init.huawei.rc
+++ b/ramdisk/init.huawei.rc
@@ -7,11 +7,9 @@ on init
 # create mountpoints
     mkdir /mnt 0775 root system
     mkdir /mnt/sdcard 0000 system system
-    mkdir /mnt/sdcard1 0000 system system
-    mkdir /HWUserData 0000 system system
+    mkdir /mnt/emmc 0000 system system
     
     symlink /mnt/sdcard /sdcard
-    symlink /mnt/sdcard1 /HWUserData
     
     export EXTERNAL_STORAGE /mnt/sdcard
     
@@ -20,7 +18,6 @@ on early-boot
     setrlimit 8 67108864 67108864
 
 on emmc-fs
-# mount mmc partitions
     wait /dev/block/mmcblk0p12
     mount ext4 /dev/block/mmcblk0p12 /system rw barrier=1
     wait /dev/block/mmcblk0p13
@@ -28,7 +25,7 @@ on emmc-fs
     mount ext4 /dev/block/mmcblk0p13 /data rw nosuid nodev barrier=1 noauto_da_alloc noatime nomblk_io_submit
     mount ext4 /dev/block/mmcblk0p6 /cache rw nosuid nodev barrier=1 noauto_da_alloc noatime nomblk_io_submit
     wait /dev/block/mmcblk0p14
-    mount vfat /dev/block/mmcblk0p14 /HWUserData uid=1000,gid=1015,umask=0002,utf8
+    mount vfat /dev/block/mmcblk0p14 /mnt/emmc uid=1000,gid=1015,umask=0002,utf8
     mkdir /.cust_backup
     mount vfat /dev/block/mmcblk0p1 /.cust_backup rw wait
 
