qcom_cfg.ini: merge dzo's changes

--- a/configs/qcom_cfg.ini
+++ b/configs/qcom_cfg.ini
@@ -8,14 +8,14 @@ gEnableImps=1
 gEnableIdleScan=0
 
 # Increase sleep duration (seconds) during IMPS
-gImpsModSleepTime=600
+gImpsModSleepTime=0
 
 # Enable BMPS or not
 gEnableBmps=1
 #/* < DTS2011111106040 limeng 20111116 begin */
 gEnableLogp=1
 
-gDynamicPSPollvalue=5
+#gDynamicPSPollvalue=5
 
 #gEnforceDefaultDomain=1
 #/* DTS2011111106040 limeng 20111116 end > */
@@ -37,7 +37,7 @@ gEnableHandoff=0
 # CSR Roaming Enable(1) Disable(0)
 gRoamingTime=0
 
-gDataInactivityTimeout=100
+#gDataInactivityTimeout=100
 
 # STA MAC Address - This will be used until NV items are in place
 # Each byte of MAC address is represented in Hex format as XX
@@ -71,7 +71,7 @@ McastBcastFilter=3
 gEnableLogp=1
 #/* < DTS2011111106040 limeng 20111116 begin */
 # Max PsPoll frame number sent from STA to AP. 0~255. 
-gMaxPsPoll=64
+gMaxPsPoll=1
 #/* DTS2011111106040 limeng 20111116 end > */
 #SoftAP Related Parameters
 # AP MAC address
