--- a/ramdisk/init.qcom.usb.rc
+++ b/ramdisk/init.qcom.usb.rc
@@ -445,3 +445,10 @@ on property:sys.usb.config=mass_storage
     write /sys/class/android_usb/android0/functions mass_storage
     write /sys/class/android_usb/android0/enable 1
     setprop sys.usb.state $sys.usb.config
+
+# Adding this in because adb is being removed from persist.sys.usb.config after booting
+on property:persist.service.adb.enable=1
+    start adbd
+
+on property:persist.service.adb.enable=0
+    stop adbd
