init.huawei.rc: fix typo

--- a/ramdisk/init.huawei.rc
+++ b/ramdisk/init.huawei.rc
@@ -150,7 +150,7 @@ service netmgrd /system/bin/netmgrd
     class main
     disabled
 
-service wpa_supplicant /system/bin/logwrapper /system/bin/wpa_supplicant Dnl80211 -iwlan0 -c/data/misc/wifi/wpa_supplicant.conf -dd
+service wpa_supplicant /system/bin/logwrapper /system/bin/wpa_supplicant -Dnl80211 -iwlan0 -c/data/misc/wifi/wpa_supplicant.conf -dd
     class late_start
     user root
     group wifi inet
